--- a/css/styles.css
+++ b/css/styles.css
@@ -8,16 +8,40 @@
     font-family: 'Kanit', sans-serif;
 }
 
+html{
+    height: 100%;
+}
+
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+}
+
+header{
+    position: fixed;
+    width: 100%;
+}
+
+main{
+    height: 80%;
+}
 h1{
     background-color: rgb(75, 222, 185);
-    font-size: smaller;
+    font-size: smaller;    
 }
 h2{
     background-color: rgb(24, 115, 207);
+    box-shadow: 0px 10px 10px -7px rgb(74, 73, 73);
 }
 
 h1, h2 {
-    padding: 15px;
+    padding: 15px;    
+}
+
+h3{
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 body{
@@ -27,16 +51,39 @@ body{
 }
 .row{
     text-align: center;
-    margin-top: 100px;
+    margin-top: 200px;
+    max-width: 100%;
+    min-width: 300px;
+    padding: 10px;
 }
 
 .row .col-md{
     background-color: rgb(246, 244, 244);    
     margin-left: 15px;
     width: 200px;
-    height: 200px;
     display: inline-flex;
     flex-direction: column;
+    box-shadow: 0px 10px 10px -6px rgb(183, 182, 182);
+}
+
+
+.cabeceraHeroe{
+    width: 100%;
+}
+.cuerpoHeroe{
+    height: 60px;
+}
+.avatar{
+    position: relative;
+    bottom: 65px;
+    right: 8px;
+    border-radius: 50%;
+}
+.heart{
+    position: relative;
+    width: 17px;
+    bottom: 220px;
+    right: 10px;
 }
 
 p{
@@ -53,11 +100,14 @@ p{
     padding: 8px;
     position: relative;
     bottom: center;
+    left: 40px;
 }
 
-footer{
+footer{    
     color: white;
     background-color:rgb(24, 115, 207);
     margin-top: auto;
+    padding: 10px;
+    bottom: 0px;
 }
 
